--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "jquery": "^3.3.1",
     "node-pty": "^0.7.4",
     "xterm": "^3.2.0"
   },
