--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "jquery": "^3.3.1",
+    "jquery-ui": "^1.12.1",
     "node-pty": "^0.7.4",
+    "textcomplete": "^0.16.1",
     "xterm": "^3.2.0"
   },
   "devDependencies": {},
