--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "electron ."
   },
   "dependencies": {
+    "electron-packager": "^11.2.0",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "node-pty": "^0.7.4",
     "textcomplete": "^0.16.1",
     "xterm": "^3.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "electron": "^1.8.4"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/xinuy77/Shelly.git"
