--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "electron ."
   },
   "dependencies": {
+    "electron-in-page-search": "^1.3.1",
     "electron-packager": "^11.2.0",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "node-pty": "^0.7.4",
-    "textcomplete": "^0.16.1",
-    "xterm": "^3.2.0"
+    "textcomplete": "^0.16.1"
   },
   "devDependencies": {
     "electron": "^1.8.4"
