--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "electron-in-page-search": "^1.3.1",
+    "electron-json-storage": "^4.0.2",
     "electron-packager": "^11.2.0",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
