--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "electron-packager": "^11.2.0",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
-    "node-pty": "^0.7.4",
-    "textcomplete": "^0.16.1"
+    "node-pty": "^0.7.4"
   },
   "devDependencies": {
     "electron": "^1.8.4"
