--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-packager . Shelly --overwrite --asar=true --platform=linux --arch=x64 --prune=true --out=release-builds"
   },
   "dependencies": {
     "electron-in-page-search": "^1.3.1",
